# xboxrecompforlinux

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: GETTING_STARTED.md
docs/game-bringup/: fsw-ten-hammers.md
src/apu/: CMakeLists.txt  README.md  apu_core.c  apu_shim.h
src/audio/: CMakeLists.txt  dsound_device.c
src/d3d/: CMakeLists.txt  README.md  d3d8_null.c  d3d8_vulkan_host.c  d3d8_vulkan_host.h
src/d3d/shaders/: d3d8_rhw.frag  d3d8_rhw.vert
src/input/: CMakeLists.txt  README.md  xinput_device_sdl.c
src/kernel/: CMakeLists.txt  kernel_bridge.c  xbox_memory_layout.c
src/nv2a/: CMakeLists.txt  nv2a_pgraph_null.c  qemu_shim.h
src/platform/win32_compat/: bcrypt.h  intrin.h  mmsystem.h  shlobj.h  windows.h  xinput.h
templates/new-game/: CMakeLists.txt
templates/new-game/src/: main.c
templates/runtime/: recomp_types.h
tools/: README.md
tools/disasm/: __main__.py  disasm.py  functions.py  labels.py
tools/recomp/: __init__.py  __main__.py  config.py  harvest_missing_targets.py  output.py  translator.py
tools/symbols/: __init__.py  map_parser.py  merge_seeds.py  names.py  pdb_parser.py
